# Quant-QQQ-realTQQQ

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtest/: run.py
data/: downloader.py
reports/: results.md
reports/csi300/: csi300_results.md
reports/csi300/optimize/: optimize_csi3x_t5_ma60-120-180-200-240-250.csv  optimize_csicombo_t5_ma60-120-180-200-240-250.csv
reports/optimize/: optimize_combo_t5.csv  optimize_combo_t5_ma100-150-200-250.csv  optimize_tqqq_t5.csv  optimize_tqqq_t5_ma100-150-200-250.csv
reports/tranches_1/: results.md
reports/tranches_3/: results.md
reports/tranches_5/: results.md
strategies/: engine.py  tqqq_ma200.py
tests/: test_strategies.py  test_strategy.py
